--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,17 +1,14 @@
 .nav {
   grid-area: nav;
   background-color: burlywood;
+  padding: 20px;
 }
-/* .item.active-link {
-  color: red;
-  text-decoration: underline;
-  font-size: bold;
-} */
-.active{
+.active {
   color: red;
   text-decoration: underline;
   font-size: bold;
 }
 .item {
   color: white;
+  text-decoration: none;
 }
